Minimal VM fails to build after JDK-8199712 (Flight Recorder)

XMLWordPrintable

    • Type: Bug
    • Resolution: Fixed
    • Priority: P4
    • 11
    • Affects Version/s: None
    • Component/s: hotspot
    • None
    • jfr
    • b14

        1) ------------------------------------------------------

        In file included from /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/jfr/jfrEvents.hpp:32:0,
                         from /pool/buildbot/slaves/sobornost/jdkX/build/src/hotspot/share/gc/shared/ageTableTracer.cpp:28:
        /pool/buildbot/slaves/sobornost/jdkX/build/build/linux-x86-normal-minimal-fastdebug/hotspot/variant-minimal/gensrc/jfrfiles/jfrEventClasses.hpp:9716:25: error: 'Method' does not name a type
           void set_method(const Method*) { }
                                 ^~~~~~
        /pool/buildbot/slaves/sobornost/jdkX/build/build/linux-x86-normal-minimal-fastdebug/hotspot/variant-minimal/gensrc/jfrfiles/jfrEventClasses.hpp:9750:11: error: 'Klass' does not name a type
             const Klass*,
                   ^~~~~
        /pool/buildbot/slaves/sobornost/jdkX/build/build/linux-x86-normal-minimal-fastdebug/hotspot/variant-minimal/gensrc/jfrfiles/jfrEventClasses.hpp:9753:30: error: 'Klass' does not name a type
           void set_parkedClass(const Klass*) { }
                                      ^~~~~
        /pool/buildbot/slaves/sobornost/jdkX/build/build/linux-x86-normal-minimal-fastdebug/hotspot/variant-minimal/gensrc/jfrfiles/jfrEventClasses.hpp:9763:11: error: 'Klass' does not name a type
             const Klass*,
                   ^~~~~
        /pool/buildbot/slaves/sobornost/jdkX/build/build/linux-x86-normal-minimal-fastdebug/hotspot/variant-minimal/gensrc/jfrfiles/jfrEventClasses.hpp:9766:31: error: 'Klass' does not name a type
           void set_monitorClass(const Klass*) { }
                                       ^~~~~
        /pool/buildbot/slaves/sobornost/jdkX/build/build/linux-x86-normal-minimal-fastdebug/hotspot/variant-minimal/gensrc/jfrfiles/jfrEventClasses.hpp:9776:11: error: 'Klass' does not name a type
             const Klass*,
                   ^~~~~
        /pool/buildbot/slaves/sobornost/jdkX/build/build/linux-x86-normal-minimal-fastdebug/hotspot/variant-minimal/gensrc/jfrfiles/jfrEventClasses.hpp:9781:31: error: 'Klass' does not name a type
           void set_monitorClass(const Klass*) { }
                                       ^~~~~
        /pool/buildbot/slaves/sobornost/jdkX/build/build/linux-x86-normal-minimal-fastdebug/hotspot/variant-minimal/gensrc/jfrfiles/jfrEventClasses.hpp:9793:11: error: 'Klass' does not name a type
             const Klass*,
                   ^~~~~
        /pool/buildbot/slaves/sobornost/jdkX/build/build/linux-x86-normal-minimal-fastdebug/hotspot/variant-minimal/gensrc/jfrfiles/jfrEventClasses.hpp:9796:31: error: 'Klass' does not name a type
           void set_monitorClass(const Klass*) { }
                                       ^~~~~
        /pool/buildbot/slaves/sobornost/jdkX/build/build/linux-x86-normal-minimal-fastdebug/hotspot/variant-minimal/gensrc/jfrfiles/jfrEventClasses.hpp:9806:11: error: 'Klass' does not name a type
             const Klass*,
                   ^~~~~

        2) ---------------------------------------------------------

        * For target hotspot_variant-minimal_libjvm_objs_gcTrace.o:
        In file included from /home/shade/jdk-jdk/src/hotspot/share/gc/shared/copyFailedInfo.hpp:28:0,
                         from /home/shade/jdk-jdk/src/hotspot/share/gc/shared/gcTrace.cpp:26:
        /home/shade/jdk-jdk/src/hotspot/share/jfr/support/jfrThreadId.hpp:35:9: error: ‘u8’ does not name a type
         typedef u8 traceid;
                 ^~

        3) ---------------------------------------------------------

        /home/shade/jdk-jdk/src/hotspot/share/runtime/java.cpp: In function ‘void before_exit(JavaThread*)’:
        /home/shade/jdk-jdk/src/hotspot/share/runtime/java.cpp:467:3: error: ‘EventThreadEnd’ was not declared in this scope
           EventThreadEnd event;
           ^~~~~~~~~~~~~~
        /home/shade/jdk-jdk/src/hotspot/share/runtime/java.cpp:468:7: error: ‘event’ was not declared in this scope
           if (event.should_commit()) {
               ^~~~~

              Assignee:
              Aleksey Shipilev
              Reporter:
              Aleksey Shipilev
              Votes:
              0 Vote for this issue
              Watchers:
              1 Start watching this issue

                Created:
                Updated:
                Resolved: