8203285: Minimal VM fails to build after JDK-8199712 (Flight Recorder)

Reviewed-by: mgronlun